--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -56,7 +56,7 @@ TK-<%= current_project.initial %>-<%= @task.id %> <%= @task.title %></h2>
   <br /> 
 
  <% if @task.impediment == TRUE %>
-     <b>Impedimento?</b>
+     <b>Obs</b>
      <br />
          Tarefa com impedimento <%= image_tag('flag.png', class: 'flag_impediment') %>
      <br />
