--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -205,8 +205,15 @@ div#notification_inactived {
     border-radius: 40px;
     width: 40px;
     height: 40px;
+    vertical-align: middle;
 }
 
+.image_thumbnail_task_list {
+    border-radius: 40px;
+    width: 20px;
+    height: 20px;
+    vertical-align: middle;
+}
 
 /*****************************************************************/
 /*****************************************************************/
