--- a/app/views/user_stories/index.html.erb
+++ b/app/views/user_stories/index.html.erb
@@ -90,6 +90,11 @@
            <%= user_story.sprint.name %>
      </div>
 
+     <div class="mini_blue_button">
+           <b>Pontuação: </b>
+           <%= user_story.story_points %>
+     </div>
+     story_points
      <% end %>
       </div>
 </button>
