--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -22,7 +22,30 @@
   <p class="info"><%= image_tag("width.png") %><strong> Tamanho:</strong> <%= @project.size %> Story points</p>
   <p class="info"><%= image_tag("calendar_icon.png") %> <strong>Data de inicio:</strong> <%= l @project.start_date %></p>
   <p class="info"><%= image_tag("calendar_icon.png") %> <strong>Data final:</strong> <%= l @project.end_date %></p>
-
+  <p class="info"><%= image_tag("difficulty_icon.png") %> <strong>Dificuldade:</strong> 
+          <% if @project.difficulty == "1" %>
+            <b class="high_priority">Alta</b>
+          <% end %>
+          <% if @project.difficulty == "2" %>
+            <b class="medium_priority">Média</b>
+          <% end %>
+          <% if @project.difficulty == "3" %>
+            <b class="low_priority">Baixa</b>
+          <% end %>
+        </p>
+        <p class="info">
+           <%= image_tag("priority_icon.png") %> 
+           <strong>Prioridade:</strong> 
+              <% if @project.priority_id == 1 %>
+                <b class="high_priority">Alta</b>
+              <% end %>
+              <% if @project.priority_id == 2 %>
+                <b class="medium_priority">Média</b>
+              <% end %>
+              <% if @project.priority_id == 3 %>
+                <b class="low_priority">Baixa</b>
+              <% end %>
+        </p>
   <p class="info"><%= image_tag("product-description.png") %> <strong>Descrição:</strong></p>
 
   <br />
