Add tiny script only application layout

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,43 +1,4 @@
-<script>
-              tinymce.init({
-                selector: 'textarea#file-picker-comments',
-                height: 500,
-                plugins: 'undo redo | formatselect | bold italic backcolor | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | removeformat | table | link | image ',
-                toolbar: 'undo redo | formatselect | bold italic backcolor | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | removeformat | table | link | image ',
 
-                image_title: true,
-
-                automatic_uploads: true,
-
-                file_picker_types: 'image',
-
-                file_picker_callback: function (cb, value, meta) {
-                  var input = document.createElement('input');
-                  input.setAttribute('type', 'file');
-                  input.setAttribute('accept', 'image/*');
-               
-                  input.onchange = function () {
-                    var file = this.files[0];
-
-                    var reader = new FileReader();
-                    reader.onload = function () {
-               
-                      var id = 'blobid' + (new Date()).getTime();
-                      var blobCache =  tinymce.activeEditor.editorUpload.blobCache;
-                      var base64 = reader.result.split(',')[1];
-                      var blobInfo = blobCache.create(id, file, base64);
-                      blobCache.add(blobInfo);
-
-                      cb(blobInfo.blobUri(), { title: file.name });
-                    };
-                    reader.readAsDataURL(file);
-                  };
-
-                  input.click();
-                },
-                content_style: 'body { font-family:Helvetica,Arial,sans-serif; font-size:14px }'
-              });
-</script>
 
 <div class="container"> 
 <%= render 'tasks/breadcrumb' %>
@@ -100,7 +61,7 @@ TK-<%= current_project.initial %>-<%= @task.id %> <%= @task.title %></h2>
      <b>Obs</b>
      <br />
          Tarefa com impedimento <%= image_tag('flag.png', class: 'flag_impediment') %>
-     <brhtml_safe  />
+     <br />
      <br />
   <% end %>
  
@@ -169,7 +130,7 @@ TK-<%= current_project.initial %>-<%= @task.id %> <%= @task.title %></h2>
             <h4> Adicionar comentário </h4>
             <br />
             <%= form_for([@task, @task.comments.build], html: {class: 'form'}) do |comment| %>
-                  <%= comment.text_area :content, class: "TinyMCE", id: "file-picker-comments" %>
+                  <%= comment.text_area :content, class: "TinyMCE", id: "file-picker" %>
                   <br />
                   <br />
                   <%= comment.button "Enviar comentário",  class: 'save blue_button' %>
