--- a/app/views/themes/_form.html.erb
+++ b/app/views/themes/_form.html.erb
@@ -1,44 +1,3 @@
-<script>
-              tinymce.init({
-                selector: 'textarea#file-picker-theme',
-                height: 500,
-                plugins: 'undo redo | formatselect | bold italic backcolor | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | removeformat | table | link | image ',
-                toolbar: 'undo redo | formatselect | bold italic backcolor | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | removeformat | table | link | image ',
-
-                image_title: true,
-
-                automatic_uploads: true,
-
-                file_picker_types: 'image',
-
-                file_picker_callback: function (cb, value, meta) {
-                  var input = document.createElement('input');
-                  input.setAttribute('type', 'file');
-                  input.setAttribute('accept', 'image/*');
-               
-                  input.onchange = function () {
-                    var file = this.files[0];
-
-                    var reader = new FileReader();
-                    reader.onload = function () {
-               
-                      var id = 'blobid' + (new Date()).getTime();
-                      var blobCache =  tinymce.activeEditor.editorUpload.blobCache;
-                      var base64 = reader.result.split(',')[1];
-                      var blobInfo = blobCache.create(id, file, base64);
-                      blobCache.add(blobInfo);
-
-                      cb(blobInfo.blobUri(), { title: file.name });
-                    };
-                    reader.readAsDataURL(file);
-                  };
-
-                  input.click();
-                },
-                content_style: 'body { font-family:Helvetica,Arial,sans-serif; font-size:14px }'
-              });
-</script>
-
 
 <%= form_for(@theme, html: {class: 'ui form'}) do |f| %>
 
@@ -65,7 +24,7 @@
     <div class="field">
       <b><%= f.label :description %></b>
       <br />
-      <%= f.text_area :description, class: "TinyMCE", id: "file-picker-theme" %>
+      <%= f.text_area :description, class: "TinyMCE", id: "file-picker" %>
     </div>
 
      <br />
