--- a/app/views/projects/chart.html.erb
+++ b/app/views/projects/chart.html.erb
@@ -196,36 +196,34 @@
           <% else %>
 
 
-          <div class="card">
+          <div class="chart_card">
            <div id="piechart_user_stories" style="width: 400px; height: 300px;"></div>
           </div>
             
-              <div class="card">    
+              <div class="chart_card">    
                 <div id="piechart_task" style="width: 400px; height: 300px;"></div>
               </div>
 
-              <div class="card">
+              <div class="chart_card">
                 <div id="piechart_status_subtask" style="width: 400px; height: 300px;"></div> 
               </div>
 
-              <div class="card">
+              <div class="chart_card">
                 <div id="piechart_status_bug" style="width: 400px; height: 300px;"></div> 
               </div>
              
-              <div class="card">
+              <div class="chart_card">
                 <div id="piechart_task_flag" style="width: 400px; height: 300px;"></div> 
               </div>
 
              <br />
-              <div class="card">
+              <div class="chart_card">
                   <div id="top_x_div" style="width: 900px; height: 500px;"></div> 
               </div>
            <br/>
 
           <% end %>
       </div>
-
-         
 
     </div> 
 <% end %>
