Add README pontos de função

--- a/app/views/projects/chart.html.erb
+++ b/app/views/projects/chart.html.erb
@@ -217,8 +217,8 @@
               </div>
 
              <br />
-              <div class="chart_card">
-                  <div id="top_x_div" style="width: 900px; height: 500px;"></div> 
+              <div class="card">
+                  <div id="top_x_div" style="width: 300px; height: 300px;"></div> 
               </div>
            <br/>
 
