--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -28,21 +28,8 @@
             <%= f.email_field :email, autofocus: true, placeholder: "Email" %>
             <%= link_to "Voltar para a tela de Login", user_session_path %>
 
-            <%= f.submit "Recuperar de senha", id: "button" %>
+            <%= f.submit "Recuperação de senha", id: "button" %>
         </div>
-        <%# <footer>
-            <ul>
-              <li>
-                  <a href="../../about.html" target="_blank">Conheça o Kronos</a>
-              </li>
-              <li>
-                  <a href="#">Termos de uso</a>
-              </li>
-              <li>
-                  <a href="#">FAQ</a>
-              </li>
-            </ul>
-        </footer> %>
     </body>
 </html>
 
