Add uppercase to project_initial field

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -87,7 +87,7 @@ $( function initPage() {
    <div>
     <b><%= f.label :initial %></b>
     <br />
-    <%= f.text_field :initial, maxlength: 6 %>
+    <%= f.text_field :initial, style: "text-transform: uppercase;", maxlength: 6 %>
   </div>
 
 
